Adjuest the sequece of Configuration file, according to using frequency.

--- a/3gppDecoder.cfg
+++ b/3gppDecoder.cfg
@@ -1,7 +1,35 @@
 {
-	"wireshark-dir": "D:/Program Files/Wireshark",
-	"notepadpp-dir": "D:/Program Files/Notepad++",
+	"wireshark-dir": "C:/Program Files/Wireshark",
+	"notepadpp-dir": "C:/Program Files (x86)/Notepad++",
 	"NAT": [
+
+		{
+			"LTE": [
+				"nas-eps",
+				"rlc-lte",
+				"s1ap",
+				"x2ap",
+				"pdcp-lte",
+				"lte-rrc.dl.ccch",
+				"lte-rrc.dl.dcch",
+				"lte-rrc.ul.ccch",
+				"lte-rrc.ul.dcch",
+				"lte-rrc.bcch.bch",
+				"lte-rrc.bcch.dl.sch",
+				"lte-rrc.pcch"
+
+			]
+		},
+		{
+			"LTE-NB": [
+				"nr-rrc.dl.ccch.nb",
+				"nr-rrc.dl.dcch.nb",
+				"nr-rrc.ul.ccch.nb",
+				"nr-rrc.ul.dcch.nb",
+				"s1ap",
+				"x2ap"
+			]
+		},
 		{
 			"NR": [
 				"nr-rrc.dl.ccch",
@@ -14,29 +42,6 @@
 				"xnap",
 				"f1ap",
 				"ngap",
-				"x2ap"
-			]
-		},
-		{
-			"LTE": [
-				"lte-rrc.dl.ccch",
-				"lte-rrc.dl.dcch",
-				"lte-rrc.ul.ccch",
-				"lte-rrc.ul.dcch",
-				"lte-rrc.bcch.bch",
-				"lte-rrc.bcch.dl.sch",
-				"lte-rrc.pcch",
-				"s1ap",
-				"x2ap"
-			]
-		},
-		{
-			"LTE-NB": [
-				"nr-rrc.dl.ccch.nb",
-				"nr-rrc.dl.dcch.nb",
-				"nr-rrc.ul.ccch.nb",
-				"nr-rrc.ul.dcch.nb",
-				"s1ap",
 				"x2ap"
 			]
 		}
