correct protocol name from NR to 5G, correct JSON format in cfg file.

--- a/3gppDecoder.cfg
+++ b/3gppDecoder.cfg
@@ -1,6 +1,6 @@
 {
 	"wireshark-dir": "C:/Program Files/Wireshark",
-	"notepadpp-dir": "C:/Program Files (x86)/Notepad++",
+	"notepadpp-dir": "C:/Program Files/Notepad++",
 	"NAT": [
 
 		{
@@ -31,7 +31,9 @@
 			]
 		},
 		{
-			"NR": [
+			"5G": [
+				"nas-5gs",
+				"mac-nr",
 				"nr-rrc.dl.ccch",
 				"nr-rrc.dl.dcch",
 				"nr-rrc.ul.ccch",
@@ -43,6 +45,7 @@
 				"f1ap",
 				"ngap",
 				"x2ap"
+				
 			]
 		}
 	]
